# libdex

./: .editorconfig  .gitignore  .gitlab-ci.yml  .lcovrc  DESIGN.md  NEWS  README.md  TODO.md  libdex.doap  meson.build  meson_options.txt
build-aux/: coverage.sh
docs/: Dex.toml.in  aio.md  channels.md  coroutines.md  dbus.md  debugging.md  fd-aio.md  integration.md  limiters.md  meson.build  overview.md  schedulers.md  state-machines.md  task-groups.md  terminology.md  threads.md  urlmap.js
examples/: cat-aio.c  cat-dex.c  cat-util.h  cat.c  cp.c  dbus.c  echo-bench.c  host.c  httpd.c  infinite-loop.c  meson.build  org.example.PingPong.xml  tcp-echo.c  wget.c
src/: 386-ucontext.h  Dex.py  amd64-ucontext.h  asm.S  dex-aio-backend-private.h  dex-aio-backend.c  dex-aio-context-private.h  dex-aio-context.c  dex-aio-private.h  dex-aio.c  dex-aio.h  dex-async-pair-private.h  dex-async-pair.c  dex-async-pair.h  dex-async-result.c  dex-async-result.h  dex-block-private.h  dex-block.c  dex-block.h  dex-callable-private.h  dex-callable.c  dex-callable.h  dex-cancellable.c  dex-cancellable.h  dex-channel.c  dex-channel.h  dex-closure.h  dex-compat-private.h  dex-coroutine-private.h  dex-coroutine.c  dex-coroutine.h  dex-delayed.c  dex-delayed.h  dex-enums.c  dex-enums.h  dex-error.c  dex-error.h  dex-fd-private.h  dex-fd.c  dex-features.h.in  (+114 more)
testsuite/: glib.supp  meson.build  org.example.Foo.xml  test-aio.c  test-async-result.c  test-channel.c  test-coroutine.c  test-dbus.c  test-fiber.c  test-future-list-model.c  test-future.c  test-jiffy.c  test-limiter.c  test-object.c  test-scheduler.c  test-semaphore.c  test-state-machine.c  test-stream.c  test-task-group.c  test-test.c  test-thread-pool.c  test-thread.c  test-util.h  test-version.c  test-watch.c
